# yard-mask-studio

./: .env.example  .gitignore  README.md  devPlan.md  labeling-tool-plan-v3.md  outputInfo.md  pyproject.toml
backend/app/: deps.py  main.py
backend/app/annotation/: mask_service.py
backend/app/api/: route_params.py  schemas.py
backend/app/core/: config.py  config_schema.py  config_store.py  db.py  logging_config.py  settings.py  tenant.py
backend/app/dataset/: __init__.py  dataset_exporter.py  split_generator.py  validator.py
backend/app/grid/: grid_calculator.py
backend/app/sam/: embedding_cache.py  prompt_handler.py  sam_predictor.py
backend/app/services/: __init__.py  dataset_service.py  review_queue_service.py
backend/app/tiling/: coordinate_utils.py  raster_source.py  (+2 more)
backend/scripts/: __init__.py  cli.py  make_test_geotiff.py  unet_dataloader_smoke.py
backend/tests/: conftest.py  test_api_routes.py  test_config_schema.py  test_config_store.py  test_coordinate_utils.py  test_dataset_exporter.py  test_embedding_cache.py  test_generate_tiles_metadata.py  test_grid_calculator.py  test_mask_service.py  test_review.py  test_sam_predictor.py  test_split_generator.py  test_tile_generator.py  test_validator.py
config/: labeling.dev.yaml  labeling.prod.yaml
docs/: api_spec.yaml  config_guide.md  dataset_spec.md  labeling_guide.md  user_guide.md
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  rle.test.ts  smoke.test.ts  vite-env.d.ts
scripts/: download_sam_checkpoint.py
(+36 files in other folders)
