[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yard-mask-studio"
version = "0.1.0"
description = "SAM2.1 기반 U-Net 학습용 라벨링 도구"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "rasterio>=1.4",
    "sqlalchemy>=2.0",
    "torch>=2.5",
    "pillow>=11.0",
    "numpy>=2.0",
    "sam2>=1.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
addopts = "-q"
